99-app-repos/shopping-app-config/app/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: shopping-backend
    app.kubernetes.io/part-of: app-shopping-backend
  name: shopping-backend
  namespace: app-shopping-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: shopping-backend
      app.kubernetes.io/part-of: app-shopping-backend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: shopping-backend
        app.kubernetes.io/part-of: app-shopping-backend
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:latest
        imagePullPolicy: Always
        name: shopping-backend
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
