99-app-repos/shopping-app-config/app/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: shopping-backend
  namespace: app-shopping-backend
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: shopping-backend
    weight: 100
  wildcardPolicy: None
